[package]
name = "wavekv"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dashmap = "6"
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
tracing = "0.1"
bincode = "1.3"
crc32fast = "1.3"

# for examples and binaries
rand = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.7", features = ["macros"] }
fs-err = "3.2.0"
clap = { version = "4", features = ["derive"] }
notify = "6"
reqwest = { version = "0.11", features = ["json"] }
md5 = "0.7"

[dev-dependencies]
tempfile = "3"
