[package]
name = "wavekv"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dashmap = "6"
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
tracing = "0.1"
bincode = { version = "2.0.1", features = ["serde"] }
rmp-serde = "1.3"
crc32fast = "1.3"
futures = "0.3"
fs-err = "3.2.0"
serde-human-bytes = "0.1.1"

[dev-dependencies]
tempfile = "3"
rand = "0.9.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
