[package]
name = "wavekv"
version = "1.0.0"
edition = "2021"
authors = ["Kevin Wang <wy721@qq.com>"]
description = "An embeddable, eventually consistent, distributed key-value store with peer-to-peer architecture"
license = "Apache-2.0"
repository = "https://github.com/Phala-Network/wavekv"
homepage = "https://github.com/Phala-Network/wavekv"
documentation = "https://docs.rs/wavekv"
readme = "../README.md"
keywords = ["distributed", "kv", "p2p", "crdt", "eventual-consistency"]
categories = ["database-implementations", "data-structures"]
rust-version = "1.70"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync", "time", "rt"] }
dashmap = "6"
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
tracing = "0.1"
bincode = { version = "2.0.1", features = ["serde"] }
rmp-serde = "1.3"
crc32fast = "1.3"
futures = "0.3"
fs-err = "3.2.0"
serde-human-bytes = "0.1.1"

[dev-dependencies]
tempfile = "3"
rand = "0.9.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
