[package]
name = "filesync"
version = "0.1.0"
edition = "2021"

[dependencies]
wavekv = { path = "../../wavekv" }
anyhow = "1.0"
axum = { version = "0.8.7", features = ["macros"] }
clap = { version = "4", features = ["derive"] }
fs-err = "3.2.0"
md5 = "0.8.0"
notify = "8.2.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
